@@ -1,5 +1,6 @@
 toooting愉快！此版本包括以下改进和修复：
 - 主动获取对话的远程内容
+- 自动加载上次我的关注的阅读位置
 - 可添加举报细节
 - 新增暂停自动播放gif动画选项
 - 隐藏用户的转嘟
